# monzo-api

./: .gitignore  .gitmodules  README.md  main.py  monzo_api_summary.md  pyproject.toml
analysis/: .gitignore  dashboard.py  eda.py  plots.py
monzo_api/: __init__.py
monzo_api/src/: __init__.py  api_calls.py  cli.py  config.py  database.py  db_schema.py  export_data.py  get_token.py  models.py  utils.py
src/: db_schema.py  export_data.py  get_token.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_api_calls.py  test_database.py  test_db_schema.py  test_export_data.py
